# microstrain-module-tools

./: .gitignore  README.md  daq_setup.py  daq_utils.py  jupyter_config.py  python.ipynb  requirements.txt
daq_utils/: __init__.py
docs/: WIRELESS.md
microstrain-daq-jupyter/: pyproject.toml
microstrain-daq-jupyter/daq_jupyter/jupyter_config/: microstrain_daq_jupyter.json
microstrain-daq-jupyter/daq_jupyter/templates/python/: python_template.ipynb
microstrain-daq-utils/: MicroStrain.DaqUtils.sln  pyproject.toml
microstrain-daq-utils/daq_utils/csharp/: DaqUtils.cs  DaqUtils.csproj  Wireless.cs
microstrain-daq-utils/daq_utils/python/: wireless.py
scripts/: setup.bat  setup.ps1  setup.sh  start.bat  start.sh
templates/: csharp_template.ipynb
templates/python/: python_template.ipynb
