[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "microstrain-daq-jupyter"
dynamic = ["version"]
description = "JupyterLab templates for MicroStrain openDAQ validation"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4",
    "jupyterlab-templates>=0.5",
]

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.targets.wheel]
packages = ["daq_jupyter"]

[tool.hatch.build.targets.wheel.shared-data]
"daq_jupyter/jupyter_config/microstrain_daq_jupyter.json" = "etc/jupyter/jupyter_server_config.d/microstrain_daq_jupyter.json"
"daq_jupyter/templates/python/python_starter.ipynb" = "share/jupyter/notebook_templates/MicroStrain Wireless/python_starter.ipynb"
"daq_jupyter/templates/csharp/csharp_starter.ipynb" = "share/jupyter/notebook_templates/MicroStrain Wireless/csharp_starter.ipynb"
